src/components/MessagesContainer/styles.scss
@import '../../assets/scss/variables';
@import '../../assets/scss/mixins';

.messages-container {
  flex: 1;
  min-height: 70vh;
  max-height: 70vh;
  padding: .5rem 1rem 3.3rem 1rem;
  overflow: auto;

  display: flex;
  flex-direction: column-reverse;
  justify-content: flex-end;

  &::-webkit-scrollbar {
    width: 14px;
  }
  &::-webkit-scrollbar-track {
    background: transparent;
  }
  &::-webkit-scrollbar-thumb {
    border: 3px solid $color-white;
    background: $color-neutral-600;
    border-radius: 8px;
  
    transition: .2s all;
  }
  &::-webkit-scrollbar-thumb:hover {
    background: $color-neutral-700;
  }
  
  &[data-theme="light"] {
    background-color: $color-neutral-100;
  }
  &[data-theme="dark"] {
    background-color: $color-neutral-950;

    &::-webkit-scrollbar-thumb {
      border: 3px solid $color-neutral-900;
      background: $color-neutral-700;
    }
    &::-webkit-scrollbar-thumb:hover {
      background: $color-neutral-600;
    }
  }

  .message {
    @include flex-row-start-start;
    width: 100%;
    padding: .5rem;
    gap: .5rem;

    > .user-icon {
      width: 2rem;
      height: 2rem;
      object-fit: cover;
      border-radius: 50%;

      &[data-theme="dark"] {
        filter: invert(1);
      }
    }

    > .message-infos-wrapper {
      @include flex-column-start-start;
      width: 100%;

      &[data-selfie-message="true"] {
        align-items: flex-end;

        .message-text {
          background-color: $color-pink;
          color: $color-white;
          border-radius: .4rem;
          border-top-right-radius: 0;

          text-align: right;
        }
      }

      > .first-row {
        
        > .username {
          font-size: $font-size-normal;
          font-weight: $font-weight-semi-bold;
          &[data-theme="light"] {
            color: $color-neutral-900;
          }
          &[data-theme="dark"] {
            color: $color-white;
          }
        }
        > .time {
          margin-left: 1rem;
          font-size: $font-size-small;
          font-weight: $font-weight-normal;
          &[data-theme="light"] {
            color: $color-neutral-650;
          }
          &[data-theme="dark"] {
            color: $color-neutral-600;
          }
        }
      }
    }

    .message-text {
      padding: .6rem;
      background-color: $color-neutral-50;
      border-radius: .4rem;
      border-top-left-radius: 0;
      box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;

      color: $color-neutral-900;
      font-size: $font-size-small;
      font-weight: $font-weight-normal;
      
      width: fit-content;
      text-align: left;
      word-break: break-word;
    }
  }

  .down-arrow {
    display: none;
    position: absolute;
    bottom: 4rem;
    right: 1.2rem;
    margin: auto;

    width: 2rem;
    height: auto;

    border-radius: 50%;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    background-color: $color-neutral-50;
    color: $color-neutral-900;

    cursor: pointer;

    &[data-visible="true"] {
      display: block;
    }
    &[data-theme="dark"] {
      box-shadow: rgba($color-neutral-400, 0.24) 0px 3px 8px;
    }
  }
}

